# bilbo_bag

./: .gitignore  README.md  bagmetrics.sh  running_the_robots
ConstrainedDMP/: DMP.m  ForwardKinematics.m  ForwardKinematics2.m  InverseKinematics.m  InverseKinematics2.m  InverseKinematics3.m  createFranka.m  generateDemo.m  getJacobians.m  main.asv  main.m  main2.asv  main2.m  manipulabilityMeasures.m  plotIK.m  plotJoint.m  plotJointTime.m  plot_result.m  preprocess.asv  preprocess.m  preprocess_1hand.m  rotate_quaternion.m  run_simulation.m  velocities_and_accelerations.m
ConstrainedDMP/demos/: 2h_flip2.csv  BagFlip_2hand.csv  d1_flip.csv  d4_flip.csv  d9_flip.csv  flip1.csv  flip2.csv  x_gaps.csv
ConstrainedDMP/own_demos/: 10l_bag_flip.csv  2h_flip.csv  2h_flip3.csv  Processed_BagFlip_q.csv  d10_flip.csv  d2_flip.csv  d3_flip.csv  d5_flip.csv  d7_flip.csv  d8_flip.csv  sack_from_bag1.csv  y_gaps.csv
ConstrainedDMP/trajectories/: joint_BagFlip.csv  pose_BagFlip.csv
ConvexHull/: BagMetrics.py  ROS_BagMetrics.py
DMP/: DMPfunc.py  readTraj.py
DMP/Backups/: BagFlip.py
DMP/Demos/: sack_from_bag2.csv
DMP/Output/: DMP_BagFlip.csv  DMP_BagFlip.xlsx  DMP_sack_from_bag1.csv
DMP/ownDMP/: __init__.py  cs.py  dmp.py  dmp_discrete.py  dmp_rhythmic.py
Data/trajectories/: A_Opt_DMP_joint_10l_bag_flip.csv  A_Opt_DMP_joint_acc_10l_bag_flip.csv  A_Opt_DMP_joint_vel_10l_bag_flip.csv  A_Opt_DMP_pose_10l_bag_flip.csv  A_TC_DMP_joint_10l_bag_flip.csv  A_TC_DMP_joint_acc_10l_bag_flip.csv  A_TC_DMP_joint_vel_10l_bag_flip.csv  A_TC_DMP_pose_10l_bag_flip.csv  A_UC_Opt_joint_10l_bag_flip.csv  A_UC_Opt_joint_vel_10l_bag_flip.csv  A_UC_TC_DMP_joint_10l_bag_flip.csv  A_UC_TC_DMP_joint_vel_10l_bag_flip.csv  A_tau_DMP_joint_10l_bag_flip.csv  A_tau_DMP_joint_acc_10l_bag_flip.csv  A_tau_DMP_joint_vel_10l_bag_flip.csv  A_tau_DMP_pose_10l_bag_flip.csv  B_Opt_DMP_joint_10l_bag_flip.csv  B_Opt_DMP_joint_vel_10l_bag_flip.csv  B_Opt_DMP_pose_10l_bag_flip.csv  B_TC_DMP_joint_10l_bag_flip.csv  B_TC_DMP_joint_vel_10l_bag_flip.csv  B_TC_DMP_pose_10l_bag_flip.csv  B_UC_Opt_joint_10l_bag_flip.csv  B_UC_Opt_joint_vel_10l_bag_flip.csv  B_UC_TC_DMP_joint_10l_bag_flip.csv  B_UC_TC_DMP_joint_vel_10l_bag_flip.csv  B_tau_DMP_joint_10l_bag_flip.csv  B_tau_DMP_joint_vel_10l_bag_flip.csv  B_tau_DMP_pose_10l_bag_flip.csv  C_Opt_DMP_joint_10l_bag_flip.csv  C_Opt_DMP_joint_vel_10l_bag_flip.csv  C_Opt_DMP_pose_10l_bag_flip.csv  C_TC_DMP_joint_10l_bag_flip.csv  C_TC_DMP_joint_vel_10l_bag_flip.csv  C_TC_DMP_pose_10l_bag_flip.csv  C_UC_Opt_joint_10l_bag_flip.csv  C_UC_Opt_joint_vel_10l_bag_flip.csv  C_UC_TC_DMP_joint_10l_bag_flip.csv  (+30 more)
MatlabPreProcess/: interpolate.m  preprocess.m
SupportScripts/: DMP_compare.asv  DMP_compare.m  InverseKinematics.m  ROS_BagMetrics.py  RobotStopper.py  createFranka.m  generateJointDemo.m  generate_plots.m  plot_runs.py  plot_runs_final.py  preprocess.asv  preprocess.m
TC_DMP_constrainedVelAcc/: DMP.m  TemporalCoupling.m  own_TCDMP_main.m  own_main.asv  own_main.m  own_plot_TCDMP.m  own_plot_result.asv  own_plot_result.m  own_plot_tauDMP.m  own_run_simulation.m  own_tauDMP_main.m
franka_david/: CMakeLists.txt  package.xml
franka_david/cpptoolbox/include/: Exceptions.h  Frame3D.h  include.h  mathUtility.hpp  matrix.hpp  numericalAlg.h  quaternion.hpp  utility_io.h
franka_david/cpptoolbox/src/: Frame3D.cpp  PositionVector3D.cpp  RotationMatrix.cpp  Transform3D.cpp  Twist.cpp  Wrench.cpp  columnvector.cpp  main.cpp  mathUtility.cpp  matrix.cpp  matrix3d.cpp  matrixutils.cpp  numericalAlg.cpp  quaternion.cpp  rowvector.cpp  utility_io.cpp
franka_david/include/: control_remote.h  control_through_python.h  examples_common.h
franka_david/msg/: DiffJointMotionPy.msg  DiffJointVelTrajPy.msg  GripperGraspPy.msg  GripperPy.msg  JointMotionPy.msg  JointTrajPy.msg  MotionPy.msg  MoveRelativePy.msg  MovetoPy.msg  RemoteMotionPy.msg
franka_david/scripts/: 1000fps_DMP_BagFlip.csv  10fps_DMP_BagFlip.csv  120fps_DMP_BagFlip.csv  20fps_DMP_BagFlip.csv  30fps_DMP_BagFlip.csv  60fps_DMP_BagFlip.csv  bag_pipeline.py  calibrate_camera_franka_arm.py  eric_joint_dual_franka.py  eric_joint_single_franka.py  eric_joint_vel_dual_franka.py  eric_joint_vel_single_franka.py  eric_test_dual_franka.py  eric_test_single_franka.py  flip_only_pipeline.py  franka.py  full_bag_pipeline.py  kinect.py  manual_bag_pipeline.py  primitives.py  recover.sh  refine_only_pipeline.py  singleFrankaRealWorldEnv.py  slow_bag_pipeline.py  test_dual_franka.py  test_franka.py  test_kinect.py  test_relative_motion.py  thurs27_eric_test_single_franka.py
franka_david/scripts/real_traj/: output.csv
franka_david/src/: control_remote.cpp  control_through_python.cpp  control_through_python_interpolate.cpp  examples_common.cpp  py_control.cpp  robot_stopper.cpp
(+290 files in other folders)
